Fix Hotels page not showing

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -45,3 +45,9 @@
   text-decoration: "underline";
   border: "2px solid black";
 };
+
+#hotels {
+  border-bottom: 2px solid black;
+  margin-bottom: 12px;
+  margin-top: 12px;
+}
